--- a/stylesheets/scss/components/_normalize.scss
+++ b/stylesheets/scss/components/_normalize.scss
@@ -118,8 +118,9 @@ main {
 		vertical-align: middle;
 	}
 
-	.sc-divider {
+	hr, .sc-divider {
 		background: if($theme == light, rgba($black, .12), rgba($white, .12));
+		border: rem-calc(1px) solid if($theme == light, rgba($black, .12), rgba($white, .12));
 		height: var(--border-size, $border-size) / 2;
 	}
 
