--- a/stylesheets/scss/components/_shadows.scss
+++ b/stylesheets/scss/components/_shadows.scss
@@ -3,6 +3,7 @@
  *
  * http://www.google.com/design/spec/what-is-material/elevation-shadows.html
  * http://material-components-web.appspot.com/elevation.html
+ * https://material.io/guidelines/resources/shadows.html#shadows-sketch
  **************************************/
 // Create classes for elevation
 @each $depth, $setting in $elevation-umbra-map {
