--- a/stylesheets/scss/components/_grid.scss
+++ b/stylesheets/scss/components/_grid.scss
@@ -1,40 +1,5 @@
-.sc-container {
-	margin: 0 auto;
-	width: 90%;
-
-	@media #{$medium-up} {
-		width: 85%;
-	}
-
-	@media #{$large-up} {
-		width: 70%;
-	}
-
-	&.sc-row {
-		margin-left: (-1 * $gutter / 2);
-		margin-right: (-1 * $gutter / 2);
-
-		@media #{$small-only} {
-			@media only screen and (max-width: 600px) {
-				margin-left: (-1 * $gutter / 2);
-				margin-right: (-1 * $gutter / 2);
-			}
-
-			@media only screen and (min-width: 600px) {
-				margin-left: (-1 * $large-gutter / 2);
-				margin-right: (-1 * $large-gutter / 2);
-			}
-		}
-
-		@media #{$medium-up} {
-			margin-left: (-1 * $large-gutter / 2);
-			margin-right: (-1 * $large-gutter / 2);
-		}
-	}
-}
-
 .sc-row {
-	margin: 0 auto rem-calc(20px) auto;
+	//margin: 0 auto rem-calc(20px) auto;
 
 	// Clear floating children
 	&:after {
@@ -46,7 +11,13 @@
 	.sc-col {
 		float: left;
 		@include box-sizing(border-box);
-		padding: 0 $gutter / 2;
+		padding: ( $gutter / 2 );
+		margin: 0;
+
+		@media #{$small-up} {
+			padding: ( $large-gutter / 2 );
+			margin: 0;
+		}
 
 		&[class*="push-"],
 		&[class*="pull-"] {
